# mlsys

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PROJECT_PLAN.md  README.md  pyproject.toml
.github/: CODEOWNERS  README.md
.github/workflows/: README.md  airflow.yml  cloud_functions.yml  deploy-dag.yml  docker-build.yml  docker.yml  pr.yml  prod.yml  staging.yml  terraform-workflow.yml  terraform.yml
api/: main.py
cloud_funcs/model_registry/: main.py  requirements.txt
infra/: README.md  terraform.tfvars.example
infra/envs/dev/: main.tf
infra/envs/prod/: main.tf
infra/envs/staging/: main.tf
infra/modules/mlsys/: artifact_registry.tf  bigquery.tf  cloud_run.tf  cloud_run_jobs.tf  cloud_scheduler.tf  gcs_buckets.tf  iam.tf  main.tf  outputs.tf  service_accounts.tf  variables.tf
notebooks/: README.md  titanic-survival-example.ipynb
scripts/: model_registry.py  predict.py
scripts/model_registry/: README.md  main.py
src/mlsys/: __init__.py  bq.py  gcs.py  settings.py  vis.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_bq.py  test_gcs.py  test_model_registry.py  test_predict.py
