[project]
name = "mlsys"
version = "0.1.3"
description = "ML System for training models in Jupyter and deploying to GCP with scheduled predictions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "google-cloud-bigquery>=3.38.0",
    "pyarrow>=22.0.0",
    "google-cloud-storage>=3.4.1",
    "joblib>=1.5.2",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
pre-commit = [
    "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
