[project]
name = "mlsys"
version = "0.2.0"
description = "ML System for machine learning development and deployment on GCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "google-cloud-bigquery>=3.38.0",
    "pyarrow>=22.0.0",
    "google-cloud-storage>=3.4.1",
    "joblib>=1.5.2",
    "fire>=0.7.1",
    "db-dtypes>=1.4.3",
    "pandas-gbq>=0.29.2",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]
dev = [
    "notebook>=7.4.7",
    "matplotlib>=3.10.7",
]
pre-commit = [
    "pre-commit>=4.3.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]                       # Where pytest looks for tests
python_files = "test_*.py"                  # Test file naming pattern
python_classes = "Test*"                    # Test class naming pattern
python_functions = "test_*"                 # Test function naming pattern
addopts = [
    "-v",                                   # Verbose output (show each test name)
    "--strict-markers",                     # Fail on unknown markers (prevents typos)
    "--cov=src/mlsys",                      # Track coverage for main package
    "--cov=scripts",                        # Track coverage for production scripts
    "--cov=api",                            # Track coverage for FastAPI endpoints
    "--cov-report=html:htmlcov",            # Generate HTML report in htmlcov/
    "--cov-report=term-missing",            # Show missing lines in terminal
]
markers = [
    "unit: Unit tests",                     # Use with: pytest -m unit
    "integration: Integration tests",       # Use with: pytest -m integration
]

[tool.coverage.run]
source = ["src/mlsys", "scripts", "api"]    # Directories to measure coverage for
omit = [
    "tests/*",                              # Don't measure test code itself
    "**/__pycache__/*",                     # Skip compiled Python files
    "**/conftest.py",                       # Skip pytest configuration
    "src/mlsys/vis.py",                     # Skip vis.py (not deployed to production)
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",                     # Explicit exclusion marker
    "def __repr__",                         # String representation methods
    "raise AssertionError",                 # Unreachable assertion errors
    "raise NotImplementedError",            # Abstract method placeholders
    "if __name__ == .__main__.:",           # Script entry points
    "if TYPE_CHECKING:",                    # Type checking blocks
]
precision = 2                               # Decimal places for coverage percentage
show_missing = true                         # Show line numbers of missing coverage

[tool.coverage.html]
directory = "htmlcov"                       # Output directory for HTML report
